Facebook and Instagram links updated.

--- a/about.html
+++ b/about.html
@@ -338,12 +338,11 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 99895 77577</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>ruparajspcmr@gmail.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/ruparajaspcmr"><i
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/PCMREMSCHOOL"><i
                                 class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social"
                             href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social"
-                            href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
+                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/pcmremschool/"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
                 </div>
