--- a/pages-gallery.html
+++ b/pages-gallery.html
@@ -85,38 +85,129 @@
             </div>
         </div>
         <!-- Page Header End -->
-        <div class="gallery">
-            <section id="Republic day-24">
-                <h4>Republic Day-2024</h4>
-                <embed src="img\RR PCMR new pics\sel pics\Republic Day.jpg" width="360px" height="300px" />
-                <embed src="img\RR PCMR new pics\sel pics\Republic Day1.jpg" width="360px" height="300px" />
-                <embed src="img\RR PCMR new pics\sel pics\Republic Day2.jpg" width="360px" height="300px" />
-            </section>
+        <!-- Gallery Content -->
+        <div class="container-xxl py-5">
+            <div class="container">
 
-            <section id="PlayGround">
-                <h4>PlayGround</h4>
-                <embed src="img\School pic3 resize.jpg" width="360px" height="300px" />
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094236958.MP.jpg" width="360px" height="300px" />
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094245173.jpg" width="360px" height="300px" />
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_101113173.MP.jpg" width="360px" height="300px" />
-            </section>
+                <!-- Republic Day-2024 Section -->
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h2 class="mb-3 section-title text-gradient">Republic Day-2024</h2>
+                </div>
+                <div class="row g-4 mb-5">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/Republic Day.jpg" alt="Republic Day">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/Republic Day1.jpg" alt="Republic Day">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/Republic Day2.jpg" alt="Republic Day">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-            <section id="School Bus">
-                <h4>School Bus</h4>
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094255943.jpg" width="360px" height="300px" />
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094322896.jpg" width="360px" height="300px" />
-                <embed src="img/RR PCMR-BUS STOP.jpg" width="360px" height="300px" />
-            </section>
+                <!-- PlayGround Section -->
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h2 class="mb-3 section-title text-gradient">PlayGround</h2>
+                </div>
+                <div class="row g-4 mb-5">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/School pic3 resize.jpg" alt="Playground">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_094236958.MP.jpg" alt="Playground">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_094245173.jpg" alt="Playground">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_101113173.MP.jpg" alt="Playground">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- School Bus Section -->
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h2 class="mb-3 section-title text-gradient">School Bus</h2>
+                </div>
+                <div class="row g-4 mb-5">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_094255943.jpg" alt="School Bus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_094322896.jpg" alt="School Bus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR-BUS STOP.jpg" alt="School Bus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Video Link -->
+                <div class="text-center mt-5 wow fadeInUp" data-wow-delay="0.5s">
+                    <a href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing"
+                        target="_blank" class="btn btn-primary rounded-pill py-3 px-5">
+                        <i class="fa fa-play-circle me-2"></i>Watch Sankranti Celebrations Video
+                    </a>
+                </div>
+
+                <!-- Pagination -->
+                <div class="col-12 text-center mt-5 wow fadeInUp" data-wow-delay="0.5s">
+                    <a href="pages-gallery.html" class="page-nav-btn active">1</a>
+                    <a href="pages-gallery1.html" class="page-nav-btn">2</a>
+                    <a href="pages-gallery2.html" class="page-nav-btn">3</a>
+                    <a href="pages-gallery3.html" class="page-nav-btn">4</a>
+                    <a href="pages-gallery1.html" class="page-nav-btn">Next <i class="fa fa-arrow-right ms-2"></i></a>
+                </div>
+            </div>
         </div>
-        <center>
-            <h4><a href="pages-gallery1.html" style="color: mediumaquamarine;">Next</a>
-                <h4>
-                    <h4 style="color:chocolate;">Click Here :<a
-                            href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing">
-                            Sankranti Celebrations Video</a>
-                        <h4>
-                            <!-- Youtube link : https://youtu.be/O4GfhgG1yOM -->
-        </center>
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
 
@@ -130,14 +221,13 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 99895 77577</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>ruparajspcmr@gmail.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/ruparajaspcmr"><i
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/PCMREMSCHOOL"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
                                     class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social"
-                                href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
-                                    class="fab fa-instagram"></i></a>
+                                href="https://www.instagram.com/pcmremschool/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
