--- a/pages-gallery1.html
+++ b/pages-gallery1.html
@@ -85,104 +85,186 @@
             </div>
         </div>
         <!-- Page Header End -->
-        <div class="gallery">
-            <section id="Auditorium">
-                <h4>Auditorium</h4>
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_101141762.jpg" width="360px" height="300px" />
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_101147547.jpg" width="360px" height="300px" />
-            </section>
-            <section id="Our Campus">
-                <h4>Our Campus</h4>
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_095317766.jpg" width="360px" height="300px" />
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_095508436.jpg" width="360px" height="300px" />
-                <embed src="img/RR PCMR-Walk-a-through(pavers).jpg" width="360px" height="300px" />
-                <embed src="img/school lunch area.jpg" width="360px" height="300px" />
-                <embed src="img/school jee view.jpg" width="360px" height="300px" />
-                <embed src="img/RR PCMR-Walk-a-through.jpg" width="360px" height="300px" />
-                <embed src="img/School pic1.jpg" width="360px" height="300px" />
+        <!-- Gallery Content -->
+        <div class="container-xxl py-5">
+            <div class="container">
 
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094245173.jpg" width="360px" height="300px" />
-            </section>
+                <!-- Auditorium Section -->
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h2 class="mb-3 section-title text-gradient">Auditorium</h2>
+                </div>
+                <div class="row g-4 mb-5">
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_101141762.jpg" alt="Auditorium">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_101147547.jpg" alt="Auditorium">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- Our Campus Section -->
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h2 class="mb-3 section-title text-gradient">Our Campus</h2>
+                </div>
+                <div class="row g-4 mb-5">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_095317766.jpg" alt="Campus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_095508436.jpg" alt="Campus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR-Walk-a-through(pavers).jpg" alt="Campus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/school lunch area.jpg" alt="Campus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/school jee view.jpg" alt="Campus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR-Walk-a-through.jpg" alt="Campus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/School pic1.jpg" alt="Campus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR new pics/sel pics/PXL_20231211_094245173.jpg" alt="Campus">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- Video Link -->
+                <div class="text-center mt-5 wow fadeInUp" data-wow-delay="0.5s">
+                    <a href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing"
+                        target="_blank" class="btn btn-primary rounded-pill py-3 px-5">
+                        <i class="fa fa-play-circle me-2"></i>Watch Sankranti Celebrations Video
+                    </a>
+                </div>
+
+                <!-- Pagination -->
+                <div class="col-12 text-center mt-5 wow fadeInUp" data-wow-delay="0.5s">
+                    <a href="pages-gallery.html" class="page-nav-btn"><i class="fa fa-arrow-left me-2"></i> Prev</a>
+                    <a href="pages-gallery.html" class="page-nav-btn">1</a>
+                    <a href="pages-gallery1.html" class="page-nav-btn active">2</a>
+                    <a href="pages-gallery2.html" class="page-nav-btn">3</a>
+                    <a href="pages-gallery3.html" class="page-nav-btn">4</a>
+                    <a href="pages-gallery2.html" class="page-nav-btn">Next <i class="fa fa-arrow-right ms-2"></i></a>
+                </div>
+            </div>
         </div>
 
 
-        <h4>
-            <center><a href="pages-gallery.html" style="color: mediumaquamarine;">Previous</a> <a
-                    href="pages-gallery2.html" style="color: mediumaquamarine;">Next</a></center>
-            <h4>
-                <h4 style="color:chocolate;">
-                    <center>Click Here :<a
-                            href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing">
-                            Sankranti Celebrations Video</a></center>
-                    <h4>
+        <!-- Footer Start -->
+        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
 
-
-                        <!-- Footer Start -->
-                        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn"
-                            data-wow-delay="0.1s">
-
-                            <div class="container py-5">
-                                <div class="row g-5">
-                                    <div class="col-lg-3 col-md-6">
-                                        <h3 class="text-white mb-4">Get In Touch</h3>
-                                        <p class="mb-2" href=""><i class="fa fa-map-marker-alt me-3"></i><a
-                                                href="https://www.google.com/maps/place/PCMR+Concept+School/@14.4665094,77.7434868,14.48z/data=!4m6!3m5!1s0x3bb144d2b3f05163:0x40930e31dc127a09!8m2!3d14.4654615!4d77.7449049!16s%2Fg%2F11bztqr5fp?entry=ttu">PCMR
-                                                Concept School, FP8V+5XJ, Anantapuram, Andhra Pradesh 515672</a></p>
-                                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 99895 77577</p>
-                                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>ruparajspcmr@gmail.com</p>
-                                        <div class="d-flex pt-2">
-                                            <a class="btn btn-outline-light btn-social"
-                                                href="https://www.facebook.com/ruparajaspcmr"><i
-                                                    class="fab fa-facebook-f"></i></a>
-                                            <a class="btn btn-outline-light btn-social"
-                                                href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
-                                                    class="fab fa-youtube"></i></a>
-                                            <a class="btn btn-outline-light btn-social"
-                                                href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
-                                                    class="fab fa-instagram"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3 col-md-6">
-                                        <h3 class="text-white mb-4">Quick Links</h3>
-                                        <a class="btn btn-link text-white-50" href="about.html">About Us</a>
-                                        <a class="btn btn-link text-white-50" href="contact.html">Contact Us
-                                            <br />(Working hours 9:00 to 4:00)</a>
-                                        <a class="btn btn-link text-white-50" href="pages-gallery.html">Gallery</a>
-
-                                    </div>
-                                    <div class="col-lg-3 col-md-6">
-                                        <img src="img/RR-PCMR-Logo.ico" height="100%" width="100%" alt="Logo">
-                                    </div>
-                                </div>
-
-
-                            </div>
-                            <div class="container">
-                                <div class="copyright">
-                                    <div class="row">
-                                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                                            &copy; <a class="border-bottom" href="#">RupaRaja's PCMR</a>, All Right
-                                            Reserved.
-
-                                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                                            Designed By <a class="border-bottom" href="https://htmlcodex.com">Gautham
-                                                R</a>
-                                        </div>
-                                        <div class="col-md-6 text-center text-md-end">
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+            <div class="container py-5">
+                <div class="row g-5">
+                    <div class="col-lg-3 col-md-6">
+                        <h3 class="text-white mb-4">Get In Touch</h3>
+                        <p class="mb-2" href=""><i class="fa fa-map-marker-alt me-3"></i><a
+                                href="https://www.google.com/maps/place/PCMR+Concept+School/@14.4665094,77.7434868,14.48z/data=!4m6!3m5!1s0x3bb144d2b3f05163:0x40930e31dc127a09!8m2!3d14.4654615!4d77.7449049!16s%2Fg%2F11bztqr5fp?entry=ttu">PCMR
+                                Concept School, FP8V+5XJ, Anantapuram, Andhra Pradesh 515672</a></p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 99895 77577</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>ruparajspcmr@gmail.com</p>
+                        <div class="d-flex pt-2">
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/PCMREMSCHOOL"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social"
+                                href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
+                                    class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social"
+                                href="https://www.instagram.com/pcmremschool/"><i class="fab fa-instagram"></i></a>
                         </div>
-                        <!-- Footer End -->
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h3 class="text-white mb-4">Quick Links</h3>
+                        <a class="btn btn-link text-white-50" href="about.html">About Us</a>
+                        <a class="btn btn-link text-white-50" href="contact.html">Contact Us
+                            <br />(Working hours 9:00 to 4:00)</a>
+                        <a class="btn btn-link text-white-50" href="pages-gallery.html">Gallery</a>
+
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <img src="img/RR-PCMR-Logo.ico" height="100%" width="100%" alt="Logo">
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="container">
+                <div class="copyright">
+                    <div class="row">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                            &copy; <a class="border-bottom" href="#">RupaRaja's PCMR</a>, All Right
+                            Reserved.
+
+                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                            Designed By <a class="border-bottom" href="https://htmlcodex.com">Gautham
+                                R</a>
+                        </div>
+                        <div class="col-md-6 text-center text-md-end">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Footer End -->
 
 
 
 
-                        <!-- Back to Top 
+        <!-- Back to Top 
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a> -->
     </div>
 
