--- a/pages-gallery3.html
+++ b/pages-gallery3.html
@@ -85,16 +85,82 @@
             </div>
         </div>
         <!-- Page Header End -->
-        <div class="gallery">
-            <section id="Older Gallery">
-                <h4>Older Gallery</h4>
-                <embed src="img/RR PCMR-Annual Day.jpg" width="360px" height="300px" />
-                <embed src="img/INDEPENDENCE DAY.jpg" width="360px" height="300px" />
-                <embed src="img/RR PCMR-Harsha Sir with kids.jpg" width="360px" height="300px" />
-                <embed src="img/RR PCMR-Students group.jpg" width="360px" height="300px" />
-                <embed src="img/RR PCMR-Students group1.jpg" width="360px" height="300px" />
-                <embed src="img/Sports trophy.jpg" width="360px" height="300px" />
-            </section>
+        <!-- Gallery Content -->
+        <div class="container-xxl py-5">
+            <div class="container">
+
+                <!-- Older Gallery Section -->
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h2 class="mb-3 section-title text-gradient">Older Gallery</h2>
+                </div>
+                <div class="row g-4 mb-5">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR-Annual Day.jpg" alt="Older Gallery">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/INDEPENDENCE DAY.jpg" alt="Older Gallery">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR-Harsha Sir with kids.jpg" alt="Older Gallery">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR-Students group.jpg" alt="Older Gallery">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="gallery-item">
+                            <img src="img/RR PCMR-Students group1.jpg" alt="Older Gallery">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="gallery-item">
+                            <img src="img/Sports trophy.jpg" alt="Older Gallery">
+                            <div class="gallery-overlay">
+                                <i class="fa fa-plus"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Video Link -->
+                <div class="text-center mt-5 wow fadeInUp" data-wow-delay="0.5s">
+                    <a href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing"
+                        target="_blank" class="btn btn-primary rounded-pill py-3 px-5">
+                        <i class="fa fa-play-circle me-2"></i>Watch Sankranti Celebrations Video
+                    </a>
+                </div>
+
+                <!-- Pagination -->
+                <div class="col-12 text-center mt-5 wow fadeInUp" data-wow-delay="0.5s">
+                    <a href="pages-gallery2.html" class="page-nav-btn"><i class="fa fa-arrow-left me-2"></i> Prev</a>
+                    <a href="pages-gallery.html" class="page-nav-btn">1</a>
+                    <a href="pages-gallery1.html" class="page-nav-btn">2</a>
+                    <a href="pages-gallery2.html" class="page-nav-btn">3</a>
+                    <a href="pages-gallery3.html" class="page-nav-btn active">4</a>
+                </div>
+            </div>
         </div>
 
 
@@ -122,13 +188,13 @@
                                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>ruparajspcmr@gmail.com</p>
                                         <div class="d-flex pt-2">
                                             <a class="btn btn-outline-light btn-social"
-                                                href="https://www.facebook.com/ruparajaspcmr"><i
+                                                href="https://www.facebook.com/PCMREMSCHOOL"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-social"
                                                 href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
                                                     class="fab fa-youtube"></i></a>
                                             <a class="btn btn-outline-light btn-social"
-                                                href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
+                                                href="https://www.instagram.com/pcmremschool/"><i
                                                     class="fab fa-instagram"></i></a>
                                         </div>
                                     </div>
