--- a/contact.html
+++ b/contact.html
@@ -135,13 +135,12 @@
                             <p class="mb-3 text-dark">+91 99895 77577</p>
                             <div class="d-flex justify-content-center gap-2 mt-3">
                                 <a class="btn btn-sm btn-outline-primary btn-social rounded-circle"
-                                    href="https://www.facebook.com/ruparajaspcmr"><i class="fab fa-facebook-f"></i></a>
+                                    href="https://www.facebook.com/PCMREMSCHOOL"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-sm btn-outline-primary btn-social rounded-circle"
                                     href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
                                         class="fab fa-youtube"></i></a>
                                 <a class="btn btn-sm btn-outline-primary btn-social rounded-circle"
-                                    href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
-                                        class="fab fa-instagram"></i></a>
+                                    href="https://www.instagram.com/pcmremschool/"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -195,14 +194,13 @@
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>ruparajspcmr@gmail.com</p>
                         <div class="d-flex pt-2">
 
-                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/ruparajaspcmr"><i
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/PCMREMSCHOOL"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
                                     class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social"
-                                href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
-                                    class="fab fa-instagram"></i></a>
+                                href="https://www.instagram.com/pcmremschool/"><i class="fab fa-instagram"></i></a>
 
                         </div>
                     </div>
