--- a/index.html
+++ b/index.html
@@ -799,14 +799,13 @@
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>ruparajspcmr@gmail.com</p>
                         <div class="d-flex pt-2">
                             <!--<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>-->
-                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/ruparajaspcmr"><i
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/PCMREMSCHOOL"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
                                     class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social"
-                                href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
-                                    class="fab fa-instagram"></i></a>
+                                href="https://www.instagram.com/pcmremschool/"><i class="fab fa-instagram"></i></a>
                             <!--   <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>-->
                         </div>
                     </div>
